--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,12 @@
 	</head>
 
 		<body>
+			<nav>
+				<li> <a href="{% url 'blog_post_list' %}">Blogs</a> </li>
+				<li> <a href="{% url 'startups_list' %}">Startups</a> </li>
+				<li> <a href="{% url 'startup_tags_list' %}">Tags</a> </li>
+
+			</nav>
 			<div>
 				<header>
 					<h1> Startup Organizer </h1>
